# Lumen

./: .gitattributes  .gitignore  README.md  ci.yml  plan.md  pyproject.toml
src/lumen/: __init__.py
src/lumen/builtin_plugins/: __init__.py
src/lumen/builtin_plugins/notes/: __init__.py
src/lumen/builtin_plugins/snippets/: __init__.py
src/lumen/builtin_plugins/tasks/: __init__.py
src/lumen/cli/: __init__.py  main.py  notes.py  plugins.py  tasks.py
src/lumen/core/: __init__.py  config.py  context.py  event_bus.py  hookspecs.py  plugin_manager.py  scheduler.py
src/lumen/domain/: __init__.py  note.py  tag.py  task.py
src/lumen/storage/: db.py  repositories.py
tests/: test_smoke.py
