[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumen-cli"
version = "0.1.0"
description = "Your extensible second brain in the terminal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumen contributors" }]
keywords = ["cli", "notes", "tasks", "productivity", "tui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.19",
    "pluggy>=1.4",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]
web = ["fastapi>=0.111", "uvicorn>=0.30", "jinja2>=3.1"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/TU_USUARIO/lumen"
Repository = "https://github.com/TU_USUARIO/lumen"
Issues = "https://github.com/TU_USUARIO/lumen/issues"

[project.scripts]
lumen = "lumen.cli.main:app"

[project.entry-points."lumen.plugins"]
notes = "lumen.builtin_plugins.notes"
tasks = "lumen.builtin_plugins.tasks"

[tool.hatch.build.targets.wheel]
packages = ["src/lumen"]

[tool.hatch.build.targets.sdist]
include = ["src/lumen", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: Typer requires calling Option()/Argument() in argument defaults.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src/lumen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/lumen --cov-report=term-missing"

[tool.coverage.run]
source = ["src/lumen"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]